color contrast, fixed scoring

--- a/index.css
+++ b/index.css
@@ -28,7 +28,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 20px;
+    font-size: 28px;
+    font-weight: bold;
     color: white;
     user-select: none;
     overflow: hidden;
@@ -140,6 +141,41 @@
     border-radius: 20px;
 }
 
+/* POPUP */
+.wf-popup {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.wf-popup-content {
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 300px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.wf-close-btn {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.wf-close-btn:hover,
+.wf-close-btn:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
 
 @media (max-width: 600px) {
     .card-container {
@@ -148,7 +184,7 @@
     }
 
     .card-face {
-        font-size: 14px;
+        font-size: 18px;
     }
 
     .wf-header {
@@ -163,6 +199,17 @@
     .wf-flyword {
         font-size: 1.5rem;
     }
+
+    .wf-popup-content {
+        width: 200px;
+    }
+
+}
+
+@media (max-width: 350px) {
+    .card-face {
+        font-size: 14px;
+    }
 }
 
 @media (max-width: 250px) {
@@ -172,7 +219,8 @@
     }
 
     .card-face {
-        font-size: 10px;
+        font-size: 12px;
+        font-weight: normal;
     }
 
     .wf-header {
@@ -182,6 +230,10 @@
 
     .wf-header button {
         padding: 2px 4px;
+    }
+
+    .wf-popup-content {
+        width: 100px;
     }
 }
 
